hydroflow/tests/compile-fail/surface_join_badpersistence.stderr
error: Unknown lifetime generic argument `'a`, expected `'tick` or `'static`.
 --> tests/compile-fail/surface_join_badpersistence.rs:5:20
  |
5 |         j = join::<'a>() -> for_each(std::mem::drop);
  |                    ^^
